# upservice-mcp

./: .gitignore  LICENSE  README.md  README.ru.md  openapi_snapshot.json  pyproject.toml
.github/workflows/: ci.yml  drift-check.yml
scripts/: check_api_drift.py
src/upservice_mcp/: server.py
