[project]
name = "upservice-mcp"
version = "0.2.0"
description = "MCP server wrapping the Upservice Public API (employees, projects, sprints, tasks, tags, directories, channel messages)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.scripts]
upservice-mcp = "upservice_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upservice_mcp"]
